fixed photo gallery layout issues with rounding, and left menu expand/contract effects

--- a/css/all-ie-only.css
+++ b/css/all-ie-only.css
@@ -18,5 +18,20 @@
 }
 
 #diaspora_share {
-	display: none;
+	display: none !important;
+}
+/*
+#leftbar .controls {
+	float: right !important;
+	position: inherit !important;
+	top: auto !important;
+	right: auto !important;
+}
+
+#leftbar li {
+	position: inherit !important;
+}
+*/
+#leftbar ul * {
+	zoom: 1;
 }
